GET /documents?actionStatus - Add document metadata